# price-tracker

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql-analysis.yml  docker-image.yml  image-scan.yml  linter.yml  publish.yml
src/: app.py  formatting.py  vars.json
src/amazon/: amzn_api.py
src/auction/: bac_api.py
