[tool.poetry]
name = "product-tracker"
version = "0.1.0"
description = ""
authors = ["Kyle McLester <kmcleste@uncc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
