[tool.poetry]
name = "product-tracker"
version = "0.1.0"
description = ""
authors = ["Kyle McLester <kmcleste@uncc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pytest = "^7.1.2"
bs4 = "^0.0.1"
requests = "^2.28.0"
pandas = "^1.4.2"
fastapi-utils = "^0.2.1"
ipykernel = "^6.15.0"
ipywidgets = "^7.7.1"
selenium = "^4.3.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
